# chessos

./: README.md  run.sh
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/v1/routes/: health.py  play_bot.py
backend/app/core/: config.py
backend/app/schemas/: analysis.py  game.py
backend/app/services/stockfish/: engine.py
web-client/: package-lock.json  package.json
web-client/public/Portfolio/: REPORT.docx
web-client/src/: App.css  App.tsx
web-client/src/app/: routes.tsx
web-client/src/chess/: assets.ts  board.ts  captures.ts  fen.ts  game.ts  moves.ts  notation.ts  types.ts
web-client/src/components/DashboardCard/: DashboardCard.tsx
web-client/src/engine/: useStockfish.ts  useStockfishBot.ts
web-client/src/pages/: DashboardPage.tsx  OpeningDetailPage.tsx  PlayPage.tsx
